move report to right

--- a/report.html
+++ b/report.html
@@ -16,7 +16,7 @@
     />
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
     <link rel="stylesheet" href="css/index.css" />
-    <link rel="stylesheet" href="css/report.css"
+    <link rel="stylesheet" href="css/report.css"/>
     <!--<link rel="stylesheet" href="css/html.css" />-->
     <link href="https://fonts.googleapis.com/css?family=Varela+Round" rel="stylesheet">
 
@@ -303,24 +303,24 @@
 
             </div>
 
-
-                </div> 
-                <div class="budget-card-view block-activated" id="button3b">
-                    <header class="card-header transparent s3">Report</header>
-                    <div class="card-content budget-block">
+            <div class="budget-card-view block-activated" id="button3b">
+                <header class="card-header transparent s3">Report</header>
+                <div class="card-content budget-block">
 
 
 
-                        <div class="budget-left-text"><span >Report Graph</span>
-                        </div>
-
-
-                          <!--Div that will hold the pie chart-->
-                          <div id="chart_div"></div>
-
+                    <div class="budget-left-text"><span >Report Graph</span>
                     </div>
 
+
+                      <!--Div that will hold the pie chart-->
+                      <div id="chart_div"></div>
+
                 </div>
+
+            </div>
+                </div> 
+                
 
 
 
