updated a function to add budget

--- a/budget.html
+++ b/budget.html
@@ -369,8 +369,7 @@
                                             </div>
                                         </div>
                                         <span>
-                                  <a href="#" class="btn" data-toggle="modal"
-                                     data-target="#editModal"><i class="far fa-edit"></i></a>
+                                  <a href="#" class="btn" ><i class="far fa-edit"></i></a>
                               </span>
                                     </h3>
                                 </div>
@@ -388,8 +387,7 @@
                                             </div>
                                         </div>
                                         <span>
-                                    <a href="#" class="btn" data-toggle="modal"
-                                       data-target="#editModal"><i class="far fa-edit"></i></a>
+                                    <a href="#" class="btn" ><i class="far fa-edit"></i></a>
                                 </span>
                                     </h3>
                                 </div>
@@ -407,8 +405,7 @@
                                             </div>
                                         </div>
                                         <span>
-                                    <a href="#" class="btn" data-toggle="modal"
-                                       data-target="#editModal"><i class="far fa-edit"></i></a>
+                                    <a href="#" class="btn" ><i class="far fa-edit"></i></a>
                                 </span>
                                     </h3>
                                 </div>
@@ -426,8 +423,7 @@
                                             </div>
                                         </div>
                                         <span>
-                                    <a href="#" class="btn" data-toggle="modal"
-                                       data-target="#editModal"><i class="far fa-edit"></i></a>
+                                    <a href="#" class="btn" ><i class="far fa-edit"></i></a>
                                 </span>
                                     </h3>
                                 </div>
@@ -445,8 +441,7 @@
                                             </div>
                                         </div>
                                         <span>
-                                    <a href="#" class="btn" data-toggle="modal"
-                                       data-target="#editModal"><i class="far fa-edit"></i></a>
+                                    <a href="#" class="btn" ><i class="far fa-edit"></i></a>
                                 </span>
                                     </h3>
                                 </div>
@@ -520,8 +515,7 @@
                                             </div>
                                         </div>
                                         <span>
-                                  <a href="#" class="btn" data-toggle="modal"
-                                     data-target="#editModal"><i class="far fa-edit"></i></a>
+                                  <a href="#" class="btn" ><i class="far fa-edit"></i></a>
                               </span>
                                     </h3>
                                 </div>
@@ -539,8 +533,7 @@
                                             </div>
                                         </div>
                                         <span>
-                                    <a href="#" class="btn" data-toggle="modal"
-                                       data-target="#editModal"><i class="far fa-edit"></i></a>
+                                    <a href="#" class="btn" ><i class="far fa-edit"></i></a>
                                 </span>
                                     </h3>
                                 </div>
@@ -558,8 +551,7 @@
                                             </div>
                                         </div>
                                         <span>
-                                    <a href="#" class="btn" data-toggle="modal"
-                                       data-target="#editModal"><i class="far fa-edit"></i></a>
+                                    <a href="#" class="btn" ><i class="far fa-edit"></i></a>
                                 </span>
                                     </h3>
                                 </div>
@@ -577,8 +569,7 @@
                                             </div>
                                         </div>
                                         <span>
-                                    <a href="#" class="btn" data-toggle="modal"
-                                       data-target="#editModal"><i class="far fa-edit"></i></a>
+                                    <a href="#" class="btn" ><i class="far fa-edit"></i></a>
                                 </span>
                                     </h3>
                                 </div>
@@ -596,8 +587,7 @@
                                             </div>
                                         </div>
                                         <span>
-                                    <a href="#" class="btn" data-toggle="modal"
-                                       data-target="#editModal"><i class="far fa-edit"></i></a>
+                                    <a href="#" class="btn" ><i class="far fa-edit"></i></a>
                                 </span>
                                     </h3>
                                 </div>
@@ -953,7 +943,7 @@
 
         var o = document.getElementById("pt" + obj.id.toString().substr(1));
         var i = document.getElementById("ta");
-      
+
 
         if (o.childNodes[0].value) {
 
